--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-PORT=3000
+# GitHub API Token (required)
 GITHUB_TOKEN=your_github_personal_access_token
+
+# PostgreSQL Database URL (required)
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.abwforxdveptyxwdpygz.supabase.co:5432/postgres
+
+# Server Port (optional)
+PORT=3000
+
+# Node Environment (optional)
+NODE_ENV=development
