--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.4.1",
-    "hono": "^4.0.0",
+    "@types/pg": "^8.15.5",
+    "better-sqlite3": "^12.4.1",
     "dotenv": "^16.3.1",
-    "octokit": "^3.1.2"
+    "hono": "^4.0.0",
+    "octokit": "^3.1.2",
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
