--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,7 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist/server",
+    "outDir": "./dist",
     "rootDir": "./src",
     "noEmit": false
   },
