--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,9 +4,9 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "./dist/server",
+    "rootDir": "./src/server",
     "noEmit": false
   },
-  "include": ["src/server/**/*", "src/shared/**/*"]
+  "include": ["src/server/**/*"]
 }
