--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ GITHUB_TOKEN=your_github_personal_access_token
 # PostgreSQL Database URL (required)
 DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.abwforxdveptyxwdpygz.supabase.co:5432/postgres
 
+# Admin password for team creation (required)
+ADMIN_PASSWORD=your_admin_password
+
 # Server Port (optional)
 PORT=3000
 
