--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-sqlite3": "^12.4.1",
     "dotenv": "^16.3.1",
     "hono": "^4.0.0",
+    "node-fetch": "^3.3.2",
     "octokit": "^3.1.2",
     "pg": "^8.16.3",
     "sqlite3": "^5.1.7"
